2008-10-03  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderDisplayBinding:
	rework GetWindow method. now uses the ParsedDocument for a requested 
	file to check if any of its types have a GuiBuilderWindow.
	The existing method of walking the project windows list and using 
	the ProjectDom database to lookup their file locations is susceptible
	to timing problems due to imcomplete parse databases.  This method is
	probably slightly more efficient as well.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.GtkCore/GtkDesignInfo.cs,
	  MonoDevelop.GtkCore/ProjectResourceProvider.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Track API.

2008-09-23  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs: bandaid to
	avoid exceptions when removing non-existent buttons.  Fixes #377414.

2008-09-23  Mike Kestner <mkestner@novell.com> 

	* lib/stetic/libsteticui/CecilWidgetLibrary.cs: don't hold assembly
	reference beyond load operation.  Recreate it on each load so we are
	always accessing the current assembly instance.  Only access cache 
	using filename.  Ensure Class description lookups cause spew to 
	console.
	* lib/stetic/libsteticui/LibraryCache.cs: enhance the path lookup
	logic in Refresh to avoid some churn on named lookups.
	* lib/stetic/libsteticui/ProjectBackend.cs: reload library if 
	necessary before getting component types.  Fixes #427334.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.mdp: Updated projects.

2008-09-15  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCode.GuiBuilder/GtkProjectServiceExtension.cs:
	add the project stetic file to any generation warnings produced.
	Fixes #373244.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* lib/libsteticui.mdp, lib/libstetic.mdp, lib/gtk-gui/generated.cs,
	  gtk-gui/generated.cs: Updated generated code.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 
