@@ -1,3 +1,7 @@
+2008-10-05  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: fixed TODO.
+
 2008-10-03  Mike Kestner <mkestner@novell.com> 
 
 	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderDisplayBinding:
